Fixing z-index issue with buttons

--- a/themes/default.css
+++ b/themes/default.css
@@ -66,7 +66,6 @@
     border-radius:2px;
     background-color:#1C1C1C; /*IE<9*/
     background-color:rgba(28, 28, 28, 0.75);
-    z-index:1000;
 }
 
 /* Thumbnail */
@@ -196,4 +195,11 @@
 .cubiq-gallery-hasthumbnext .cubiq-gallery-thumbnext {
     display:block;
     opacity:1;
+}
+
+/* Z Index */
+.cubiq-gallery .cubiq-gallery-fullscreen,
+.cubiq-gallery .cubiq-gallery-imageprev,
+.cubiq-gallery .cubiq-gallery-imagenext {
+    z-index:1000;
 }
